# moseq2-nlp

./: .gitignore  CONTRIBUTING.md  README.md  config.cfg  doc2vec.ipynb  doc2vec_vibhu.ipynb  environment.yml  lda_analysis.ipynb  models.py  pyproject.toml  run.py  sbert.ipynb  setup.cfg  setup.py  train.py  utils.py
.github/workflows/: ci.yml
LIME-results/: top10CAR_3-group  top10CAR_5-group  top10CAR_7-group  top10MIA_3-group  top10MIA_5-group  top5CAR_3-group  top5CAR_5-group  top5CAR_7-group  top5MIA_3-group  top5MIA_5-group
XAI/moseq2_nlp_embeddings/: examine-PCA.ipynb  examine-docvecs.ipynb
XAI/moseq2_nlp_transitions/: examine-PCA.ipynb
XAI/moseq2_nlp_usages/: examine-PCA.ipynb  examine-TSNE.ipynb  experiment_info.yaml
moseq2_nlp/: .cli.py.swo  .utils.py.swp  __init__.py  cli.py  config.cfg  data.py  eval.py  grid_search_commands.txt  gridsearch.py  make_tourette_wordclouds.py  models.py  run.py  run_ablation.py  tmp.py  tmp_config.cfg  train.py  train2.py  transitions-eli5.ipynb  usages-eli5.ipynb  utils.py  visualize.py
moseq2_nlp/cli/: __init__.py  _cli.py
moseq2_nlp/data/: __init__.py  _data.py  _phrases.py
moseq2_nlp/explain/: __init__.py  _explain.py
moseq2_nlp/gridsearch/: __init__.py  (+1 more)
moseq2_viz/: cli.py  util.py  viz.py
notebooks/: doc2vec.ipynb  doc2vec_vibhu.ipynb  lime-load-data.ipynb  moseq-drugs.ipynb  ngram_tests.ipynb  reverse-mapping-with-lime.ipynb  synthetic.ipynb  text-explainer.ipynb  tmp_synth.py  vibhu_r21.ipynb
scripts/: moseq2-viz-completion.bash
tests/: test_data.py  test_entry_points.py  test_util.py
(+50 files in other folders)
