[metadata]
name = moseq2-nlp
version = attr: moseq2_nlp.__version__
author = Josh Thackray
author_email = thackray@rutgers.edu
maintainer = Josh Thackray
maintainer_email = thackray@rutgers.edu
url = https://github.com/tischfieldlab/moseq2-nlp
description = Interrogating Moseq data using a NLP-based approach
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = moseq, natural language processing, nlp
license = unlicensed
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    numpy
    brown-clustering
    tqdm
    notebook
    gensim==4.0.1
    python-Levenshtein
    scikit_learn==0.24.2
    h5py
    click
    click-option-group
    ruamel.yaml
    moseq2-viz # @ git+https://github.com/tischfieldlab/moseq2-viz.git@master
    wordcloud
    eli5
    umap

[options.extras_require]
dev =
    pytest
    pytest-cov
    black
    mypy
    pydocstyle
    toml

[options.exclude_package_data]
tests = *
docs = *

[options.packages.find]
exclude =
    tests*
    docs*

[options.entry_points]
console_scripts =
    moseq2-nlp = moseq2_nlp.cli:cli

[mypy]
follow_imports = skip
ignore_missing_imports = True
ignore_missing_imports_per_module = True
warn_unused_configs = True